# c2ge

./: .gitignore  CMakeLists.txt
examples/top_down_shooter/: CMakeLists.txt  client.c
include/c2ge/: c2ge.h  config.h  ecs.h  id_allocator.h  media.h  sprite_sheet.h
src/: c2ge.c  id_allocator.c  media.c  utils.c  utils.h
src/ecs/: world.c
test/: CMakeLists.txt  runner.c  tests.h
test/tests/: test_IDAllocator.c  test_ecs.c
